fix for z-index issues

--- a/src/style.scss
+++ b/src/style.scss
@@ -77,6 +77,7 @@ $default-mobile-breakpoint: 48rem;
 
 	&.popup-floating {
 		position: fixed;
+		z-index: 99998;
 		max-width: none;
 
 		.makeiteasy-popup-overlay {
